[gd_scene load_steps=10 format=3 uid="uid://bmpa6dfi30xtl"]

[ext_resource type="FontFile" uid="uid://cgriejvcbmcee" path="res://Assets/Fonts/elv-pixels-06.ttf" id="1_o162y"]
[ext_resource type="Script" uid="uid://ddfpqia0t7d84" path="res://Games/juicyjutsu/ui/hud.gd" id="1_xiv7m"]
[ext_resource type="Texture2D" uid="uid://b6selquec8ap0" path="res://Assets/Graphics/button_icons/pause.png" id="3_2wx7h"]

[sub_resource type="Animation" id="Animation_051ce"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Score_Label:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Score_Label:theme_override_constants/shadow_outline_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Time_Label:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_muv88"]
resource_name = "score_pulse"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Score_Label:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Score_Label:theme_override_constants/shadow_outline_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0535198, 0.0991691, 0.100743, 0.152689, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 10, 15, 20, 10, 8]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_051ce"]
_data = {
&"RESET": SubResource("Animation_051ce"),
&"score_pulse": SubResource("Animation_muv88")
}

[sub_resource type="Animation" id="Animation_mweg5"]
resource_name = "time_warning"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Time_Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.247136, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0.0352941, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nq2pb"]
_data = {
&"time_warning": SubResource("Animation_mweg5")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_051ce"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.8, 0.682353, 0.121569, 0.8)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Hud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xiv7m")

[node name="Time_Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -344.0
offset_top = 17.0
offset_right = -302.0
offset_bottom = 53.0
grow_horizontal = 0
theme_override_colors/font_shadow_color = Color(0.627451, 0.627451, 0.627451, 0.564706)
theme_override_constants/shadow_outline_size = 8
theme_override_fonts/font = ExtResource("1_o162y")
theme_override_font_sizes/font_size = 27
text = "60"

[node name="Score_Label" type="Label" parent="."]
layout_mode = 1
offset_left = 576.0
offset_top = 17.0
offset_right = 627.0
offset_bottom = 53.0
theme_override_colors/font_color = Color(1, 1, 0.717647, 1)
theme_override_colors/font_shadow_color = Color(1, 0.756863, 0.329412, 0.4)
theme_override_colors/font_outline_color = Color(1, 0.588235, 0, 1)
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 8
theme_override_fonts/font = ExtResource("1_o162y")
theme_override_font_sizes/font_size = 27
text = "100"

[node name="ScoreAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_051ce")
}

[node name="TimerAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_nq2pb")
}

[node name="PauseButton" type="Button" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
offset_left = -1.0
offset_top = -3.0
offset_right = 263.0
offset_bottom = 261.0
scale = Vector2(0.11, 0.11)
pivot_offset = Vector2(15, 22)
theme_override_styles/focus = SubResource("StyleBoxFlat_051ce")
icon = ExtResource("3_2wx7h")
flat = true

[connection signal="pressed" from="PauseButton" to="." method="_on_pause_button_pressed"]
